Implement tiparesteInvitatie